# ant-cli

./: README.md  setup.cfg
src/ant/: __init__.py  __main__.py  ant.py
tests/: test_ant.py
