[metadata]
name = ant
version = 0.1.0
author = Franz Heubach
author_email = franz@heubach.me
description = The AUV Navigation Testbed package. Provides tools for working with, and generating terrain for the Gazebo simulation envrionment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/franzheubach/ant-cli
project_urls =
    Bug Tracker = https://github.com/franzheubach/ant-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy >= 1.21
    scipy >= 1.7
    matplotlib >= 3.4
    tqdm >= 4.
    perlin_noise >= 1.7
    numpy-stl >= 2.16
    rasterio >= 1.2
    pycollada >= 0.7

[options.entry_points]
console_scripts =
    executable-name = ant.__main__:cli
	
[options.packages.find]
where = src
